Cambios realizados en: -build.gradle -ConversionTest -Launcher